--- a/my-electron-app/styles.css
+++ b/my-electron-app/styles.css
@@ -62,3 +62,9 @@ nav ul li a.disabled {
 .tile h2 {
   margin: 0 0 10px;
 }
+
+.disabled {
+  pointer-events: none;
+  color: gray;
+  cursor: default;
+}
