--- a/my-electron-app/styles.css
+++ b/my-electron-app/styles.css
@@ -79,8 +79,41 @@ nav ul li a.disabled {
   border-radius: 10px;
   width: 80%;
   max-width: 500px;
+  text-align: center;
 }
 
-.upload-section input[type="file"] {
-  margin: 10px 0;
+.file-input-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.file-input-wrapper input[type="file"] {
+  width: fit-content;
+  margin-bottom: 15px;
+}
+
+.file-input-wrapper input[type="file"]::-webkit-file-upload-button {
+  visibility: hidden;
+  width: 0;
+}
+
+.file-input-wrapper input[type="file"]::before {
+  content: 'Select Game.ini File';
+  display: inline-block;
+  background: linear-gradient(to bottom, #f9f9f9, #e3e3e3);
+  border: 1px solid #999;
+  border-radius: 3px;
+  padding: 5px 8px;
+  outline: none;
+  white-space: nowrap;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 10pt;
+}
+
+#uploadButton {
+  padding: 5px 15px;
+  margin-top: 10px;
 }
