--- a/my-electron-app/styles.css
+++ b/my-electron-app/styles.css
@@ -118,8 +118,31 @@ nav ul li a.disabled {
   margin-top: 10px;
 }
 
-/* Styling for the view page content. */
 button:disabled {
   opacity: 0.6;
   cursor: not-allowed;
+}
+
+/* Styling for the table on the view page. */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border: 2px solid #ccc;
+  margin-top: 20px;
+  table-layout: fixed;
+}
+
+/* Border between each cell. */
+td, th {
+  border: 1px solid #ccc;
+  padding: 8px;
+  text-align: left;
+  width: 25%;
+}
+
+/* Styling for stat icons in tables */
+.stat-icon {
+  height: 1.2em;
+  width: auto;
+  vertical-align: middle;
 }
