--- a/my-electron-app/src/styles.css
+++ b/my-electron-app/src/styles.css
@@ -5,7 +5,7 @@ I don't think that's a problem, but I wanted to mention it.
 
 @font-face {
   font-family: 'ARK-Regular';
-  src: url('./fonts/ARK-Regular.ttf') format('truetype');
+  src: url('./assets/fonts/ARK-Regular.ttf') format('truetype');
 }
 
 html, body {
