--- a/my-electron-app/src/styles.css
+++ b/my-electron-app/src/styles.css
@@ -79,3 +79,15 @@ button:not(.tile button):hover,
   justify-content: center;
   margin: 20px;
 }
+
+/* Button disabled state */
+.button-disabled,
+button.button-disabled,
+.button.button-disabled,
+#addFilesButton.button-disabled {
+  background-color: #999;
+  color: #ddd;
+  cursor: not-allowed;
+  pointer-events: none;
+  opacity: 0.7;
+}
