--- a/my-electron-app/src/pages/account_page/account.css
+++ b/my-electron-app/src/pages/account_page/account.css
@@ -3,6 +3,10 @@ I used GitHub copilot to do most of the styling.
 I don't think that's a problem, but I wanted to mention it.
 */
 
+#container {
+  text-align: center;
+}
+
 .auth-container {
   max-width: 500px;
   margin: 50px auto;
